# tiva_freertos

./: .gitignore  CMakeLists.txt  board.c  freertos.c  main.c  startup_gcc.c  tiva_freertos.ld  toolchain.cmake  uart_rtos.c
Debug/: .gitignore  Makefile  build.sh  clean.sh
Release/: .gitignore  Makefile  clean.sh
include/: FreeRTOSConfig.h  board.h  uart_rtos.h
